# tuidict

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build-artifacts.yml  ci.yml  create-release.yml  release.yml
src/: app.rs  cache.rs  components.rs  dictionary.rs  main.rs  ui.rs
src/app/: events.rs  mod.rs  models.rs  search.rs  state.rs
src/components/: search_input.rs  status_bar.rs
src/config/: mod.rs
src/dictionary/: cache.rs  mod.rs  models.rs  trie.rs
src/download/: api.rs  installer.rs  mod.rs
src/ui/: mod.rs
src/ui/pages/: download.rs  management.rs  mod.rs  translation.rs
