[package]
name = "tuidict"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = "0.26"
crossterm = "0.27"
anyhow = "1.0"
flate2 = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
qp-trie = "0.8"
reqwest = { version = "0.11", features = ["blocking", "json"] }
tar = "0.4"
dirs = "5.0"
xz2 = "0.1"
