[package]
name = "tuidict"
version = "0.1.5"
edition = "2021"
description = "TUI dictionary with support for multiple language pairs from FreeDict."
license = "MIT"
repository = "https://github.com/404Simon/tuidict"
readme = "README.md"
keywords = ["tui", "dictionary", "freedict"]
categories = ["command-line-utilities"]

[dependencies]
ratatui = "0.26"
crossterm = "0.27"
anyhow = "1.0"
flate2 = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
qp-trie = "0.8"
tar = "0.4"
dirs = "5.0"
xz2 = "0.1"

[target.'cfg(target_env = "musl")'.dependencies]
reqwest = { version = "0.11", features = ["blocking", "json", "rustls-tls", "rustls-tls-webpki-roots"], default-features = false }

[target.'cfg(not(target_env = "musl"))'.dependencies]
reqwest = { version = "0.11", features = ["blocking", "json", "default-tls"], default-features = false }

[[bin]]
name = "tuidict"
path = "src/main.rs"
